tests/untried/pos/t595.scala
package lampion.scala;
import _root_.scala.collection.*

class Foo extends mutable.HashMap

