tests/untried/neg/noMember1.scala
import scala.collection.mutable.MultiMap.*

class A
